<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#DAC4A4">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_title"
        android:textSize="65sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#261F31"
        android:layout_marginTop="30sp"
        android:paddingBottom="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_subtitle"
        android:textSize="45sp"
        android:textColor="#261F31"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="1sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="20sp"
        android:background="@drawable/p1_phgimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@drawable/p1_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cloud1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="-550dp"
        android:src="@drawable/p1_cloud1"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cloud2"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="-700dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/p1_cloud2"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cloud3"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="-850dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/p1_cloud3"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/banner_text"
        android:textAlignment="center"
        android:textColor="#261F31"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:backgroundTint="#002970"
        android:text="Lets Start"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="#F1F1F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>